Aggiunta gestione msg warning, error e success in nuovo.php. I msg vengono visualizzati in span usando classe css. Regole css aggiunte

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+.error{
+    color:red;
+    font-weight: bold;
+}
+.warning{
+    color:orange;
+    font-weight: bold;
+}
+.success{
+    color: green;
+    font-weight: bold;
+}
 table{
     border-collapse: collapse;
 }
