--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin:0;
+    padding: 20px;
+    background-color: #f4f4f9;
+}
+.container{
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #ffffff;
+
+}
+h1{
+    text-align: center;
+    margin-bottom: 20px;
+}
+form{
+    display: flex;
+    flex-direction: column;
+}
+form input{
+    background-color: #f0f0f0;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #cccccc;
+}
+
+form input[type="submit"]{
+    background-color: #003366;
+    color: #cccccc;
+}
+form input[type="submit"]:hover{
+    background-color: #364f68;
+}
+
 .error{
     color:red;
     font-weight: bold;
